--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -256,12 +256,25 @@
   justify-content: end;
 }
 
+/* Bento Content */
+.Bento__Item--visual-as-background .Bento__Content {
+  order: 1;
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 2;
+}
+
 /* Bento Visual */
 
 .Bento__Visual {
   height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+.Bento__Item--visual-as-background .Bento__Visual {
+  order: -1;
+  grid-row: 1 /-1;
+  grid-column: 1 /-1;
 }
 
 .Bento__Visual > img {
