--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -3,34 +3,35 @@
   width: 100%;
   grid-template-columns: repeat(12, minmax(0, 1fr));
   grid-auto-rows: var(--base-size-40);
-  grid-gap: var(--base-size-12);
+  grid-gap: var(--brand-Bento-gap-small);
   position: relative;
 }
 
 .Bento__Item {
-  background-color: #efefef;
-  border-radius: 16px; /* Should be configurable in tokens*/
-  align-items: center;
-  justify-content: center;
-  color: grey;
+  background-color: var(--brand-Bento-color-background);
+  border-radius: var(--brand-Bento-Item-borderRadius-small); /* Should be configurable in tokens*/
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr;
   overflow: hidden;
+  border: 1px solid var(--base-color-scale-gray-3);
 }
 
 @media screen and (min-width: 80rem) {
   .Bento {
-    gap: var(--base-size-32);
+    gap: var(--brand-Bento-gap-large);
   }
   .Bento__Item {
-    border-radius: 24px; /* Should be configurable in tokens*/
+    border-radius: var(--brand-Bento-Item-borderRadius-large);
   }
 }
 
 @media screen and (min-width: 48rem) {
   .Bento {
-    gap: var(--base-size-16);
+    gap: var(--brand-Bento-gap-medium);
+  }
+  .Bento__Item {
+    border-radius: var(--brand-Bento-Item-borderRadius-medium);
   }
 }
 
