--- a/packages/react/src/forms/Textarea/Textarea.module.css
+++ b/packages/react/src/forms/Textarea/Textarea.module.css
@@ -56,13 +56,15 @@
 .Textarea--medium {
   font-weight: var(--brand-text-weight-200);
   font-size: var(--brand-text-size-200);
-  padding: var(--brand-control-medium-padding, 12px 10px 10px);
+  padding-inline: var(--brand-control-medium-paddingInline-condensed);
+  padding-block: var(--brand-control-medium-paddingBlock);
 }
 
 .Textarea--large {
   font-weight: var(--brand-text-weight-300);
   font-size: var(--brand-text-size-300);
-  padding: var(--brand-control-large-padding, 12px);
+  padding-inline: var(--brand-control-large-paddingInline-condensed);
+  padding-block: var(--brand-control-large-paddingBlock);
 }
 
 /*
