--- a/packages/react/src/forms/TextInput/TextInput.module.css
+++ b/packages/react/src/forms/TextInput/TextInput.module.css
@@ -40,15 +40,13 @@
 .TextInput--medium {
   font-weight: var(--brand-text-weight-200);
   font-size: var(--brand-text-size-200);
-  padding-inline: var(--brand-control-medium-paddingInline-condensed);
-  padding-block: var(--brand-control-medium-paddingBlock);
+  padding: var(--brand-control-medium-paddingBlock) var(--brand-control-medium-paddingInline-condensed);
 }
 
 .TextInput--large {
   font-weight: var(--brand-text-weight-300);
   font-size: var(--brand-text-size-300);
-  padding-inline: var(--brand-control-large-paddingInline-condensed);
-  padding-block: var(--brand-control-large-paddingBlock);
+  padding: var(--brand-control-large-paddingBlock) var(--brand-control-large-paddingInline-condensed);
 }
 
 .TextInput-wrapper--large {
