--- a/packages/react/src/forms/Textarea/Textarea.module.css
+++ b/packages/react/src/forms/Textarea/Textarea.module.css
@@ -56,15 +56,13 @@
 .Textarea--medium {
   font-weight: var(--brand-text-weight-200);
   font-size: var(--brand-text-size-200);
-  padding-inline: var(--brand-control-medium-paddingInline-condensed);
-  padding-block: var(--brand-control-medium-paddingBlock);
+  padding: var(--brand-control-medium-paddingBlock) var(--brand-control-medium-paddingInline-condensed);
 }
 
 .Textarea--large {
   font-weight: var(--brand-text-weight-300);
   font-size: var(--brand-text-size-300);
-  padding-inline: var(--brand-control-large-paddingInline-condensed);
-  padding-block: var(--brand-control-large-paddingBlock);
+  padding: var(--brand-control-large-paddingBlock) var(--brand-control-large-paddingInline-condensed);
 }
 
 /*
