remove form control sizing

--- a/packages/react/src/forms/TextInput/TextInput.module.css
+++ b/packages/react/src/forms/TextInput/TextInput.module.css
@@ -34,7 +34,7 @@
  */
 
 .TextInput-wrapper--medium {
-  height: var(--brand-control-medium-size);
+  height: 2.5rem;
 }
 
 .TextInput--medium {
@@ -50,7 +50,7 @@
 }
 
 .TextInput-wrapper--large {
-  height: var(--brand-control-large-size);
+  height: 3rem;
 }
 
 /*
