--- a/packages/react/src/forms/Select/Select.module.css
+++ b/packages/react/src/forms/Select/Select.module.css
@@ -53,6 +53,7 @@
 
 .Select-wrapper--medium {
   height: var(--brand-control-medium-size);
+  height: 2.5rem;
 }
 
 .Select-wrapper--medium::after {
@@ -62,12 +63,13 @@
 .Select--medium {
   font-weight: var(--brand-text-weight-100);
   font-size: var(--brand-text-size-100);
-  padding-inline: var(--brand-control-medium-paddingInline-condensed);
+  padding-inline: 10px;
   padding-inline-end: calc(var(--brand-control-medium-paddingInline-condensed) + var(--base-size-16));
 }
 
 .Select-wrapper--large {
   height: var(--brand-control-large-size);
+  height: 3rem;
 }
 
 .Select-wrapper--large::after {
@@ -77,7 +79,7 @@
 .Select--large {
   font-weight: var(--brand-text-weight-200);
   font-size: var(--brand-text-size-200);
-  padding-inline: var(--brand-control-large-paddingInline-condensed);
+  padding-inline: 12px;
   padding-inline-end: calc(var(--brand-control-large-paddingInline-condensed) + var(--base-size-16));
 }
 
@@ -98,7 +100,7 @@
   border-radius: var(--brand-borderRadius-medium, 6px);
   font-family: var(--brand-body-fontFamily);
   position: relative;
-  display: grid;
+  display: inline-grid;
   grid-template-columns: minmax(0, auto) var(--base-size-16);
 }
 
