--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -349,7 +349,7 @@
   width: 10px;
   height: 10px;
   content: '';
-  background: var(--base-color-scale-gray-0);
+  background: var(--base-color-scale-white-0);
   border-radius: 2px;
   transform: rotate(45deg);
 }
@@ -360,7 +360,7 @@
   left: 50%;
   z-index: -1;
   background: white;
-  box-shadow: var(--brand-VideoPlayer-tooltip-boxShadow);
+  box-shadow: 0 4px 4px hsl(var(--base-color-scale-black-0-hsl) / 20%);
   transform: translate3d(-50%, 0, 0);
   padding: var(--brand-VideoPlayer-tooltip-padding);
   border-radius: var(--brand-borderRadius-medium);
@@ -394,7 +394,7 @@
   color: white;
   font-size: 16px;
   text-align: center;
-  background: rgba(0, 0, 0, 0.5);
+  background: hsl(var(--base-color-scale-black-0-hsl) / 50%);
   padding: var(--brand-VideoPlayer-closedCaption-text-padding);
   border-radius: var(--brand-borderRadius-medium);
   display: inline-block;
