--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -18,8 +18,8 @@
 
 .Prose {
   font-family: var(--brand-body-fontFamily);
-  font-size: var(--brand-text-size-300);
-  line-height: var(--brand-text-lineHeight-300);
+  font-size: var(--brand-text-size-200);
+  line-height: var(--brand-text-lineHeight-200);
   color: var(--brand-color-text-default);
 }
 
@@ -44,7 +44,7 @@
 /* ---------------------------------------------------------- */
 
 .Prose h1 {
-  font-weight: var(--brand-text-weight-900);
+  font-weight: var(--brand-heading-weight-900);
   font-size: var(--brand-text-size-900);
   line-height: var(--brand-text-lineHeight-900);
   font-family: var(--brand-heading-fontFamily);
@@ -56,7 +56,7 @@
 }
 
 .Prose h2 {
-  font-weight: var(--brand-text-weight-800);
+  font-weight: var(--brand-heading-weight-800);
   font-size: var(--brand-text-size-800);
   line-height: var(--brand-text-lineHeight-800);
   font-family: var(--brand-heading-fontFamily);
