--- a/packages/react/src/Testimonial/Testimonial.module.css
+++ b/packages/react/src/Testimonial/Testimonial.module.css
@@ -1,9 +1,12 @@
 .Testimonial {
   display: grid;
   gap: var(--base-size-16);
-  font-family: var(--brand-fontStack-sansSerif);
-  font-size: var(--brand-Testimonial-quoteSize-default);
   color: var(--brand-color-text-default);
+  font-family: var(--brand-fontStack-sansSerif);
+  font-size: var(--brand-Testimonial-quote-fontSize-default);
+  font-weight: var(--brand-Testimonial-quote-fontWeight-default);
+  letter-spacing: var(--brand-Testimonial-quote-letterSpacing-default);
+  line-height: var(--brand-Testimonial-quote-lineHeight-default);
 }
 
 .Testimonial::before {
@@ -20,7 +23,10 @@
 }
 
 .Testimonial--size-large {
-  font-size: var(--brand-Testimonial-quoteSize-large);
+  font-size: var(--brand-Testimonial-quote-fontSize-large);
+  font-weight: var(--brand-Testimonial-quote-fontWeight-large);
+  letter-spacing: var(--brand-Testimonial-quote-letterSpacing-large);
+  line-height: var(--brand-Testimonial-quote-lineHeight-large);
   gap: var(--base-size-24);
 }
 
