--- a/packages/react/src/ActionMenu/ActionMenu.module.css
+++ b/packages/react/src/ActionMenu/ActionMenu.module.css
@@ -7,12 +7,9 @@
 }
 
 .ActionMenu__button {
-  border-radius: var(--base-size-48);
-}
-
-.ActionMenu__button:focus:not(.ActionMenu__button[disabled]),
-.ActionMenu__button:focus-visible:not(.ActionMenu__button[disabled]) {
-  box-shadow: 0 0 0 3px var(--brand-color-focus);
+  /* avoid specificity issues */
+  --brand-control-medium-borderRadius: var(--brand-borderRadius-full);
+  --brand-control-large-borderRadius: var(--brand-borderRadius-full);
 }
 
 .ActionMenu__button > span:first-of-type {
@@ -22,10 +19,6 @@
   white-space: nowrap;
 }
 
-.ActionMenu__button:hover {
-  border-color: var(--brand-ActionMenu-color-border-hover);
-}
-
 .ActionMenu__menu {
   position: absolute;
   z-index: 100;
@@ -33,7 +26,7 @@
   margin-top: var(--base-size-8);
   visibility: hidden;
   background-color: var(--brand-color-canvas-default);
-  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
+  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-muted);
   border-radius: var(--brand-borderRadius-large);
   max-height: 460px;
   overflow-y: auto;
@@ -103,12 +96,6 @@
 .ActionMenu__item:focus-visible {
   outline: none;
   box-shadow: 0 0 0 3px var(--brand-color-focus);
-  transition: none;
-}
-
-.ActionMenu__button--active {
-  border-color: var(--brand-ActionMenu-color-border-active) !important;
-  box-shadow: 0 0 0 3px var(--brand-ActionMenu-color-border-active) !important;
   transition: none;
 }
 
